--- a/about.html
+++ b/about.html
@@ -74,20 +74,34 @@
             </div>
         </div>
 
-        <div class="bg-slate-900 rounded-2xl p-8 md:p-12 text-white relative overflow-hidden">
-            <div class="relative z-10 max-w-3xl mx-auto text-center space-y-6">
-                <h2 class="text-2xl md:text-3xl font-bold mb-2 serif">A Force Multiplier</h2>
-                <p class="text-slate-300 text-lg leading-relaxed font-light">
-                    This bot isn't here to replace the Legislative Assistant. It's here to keep you from drowning. Reading a bill and actually understanding its political impacts are two very different things. AI is already pretty good at reading 800 pages of bill text in 30 seconds.
-                </p>
-                <p class="text-slate-300 text-lg leading-relaxed font-light">
-                    This tool is designed to be a force multiplier. It sets you up to succeed and gives you more time to focus on doing just that.
-                </p>
-                <p class="text-slate-300 text-lg leading-relaxed font-light">
-                    I’ve prompted the model to look for specific "staffer" concerns: effective dates, appropriations triggers, and procedural rules. It generates a <span class="text-white font-bold">Verification Guide</span> with specific page numbers for every claim because you should never trust what someone else or AI tells you is true—verify it.
-                </p>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+            
+            <div class="bg-slate-900 rounded-2xl p-8 text-white relative overflow-hidden flex flex-col">
+                <div class="relative z-10">
+                    <h2 class="text-xl md:text-2xl font-bold mb-4 serif">A Force Multiplier</h2>
+                    <p class="text-slate-300 leading-relaxed font-light text-sm mb-4">
+                        This bot isn't here to replace the Legislative Assistant. It's here to keep you from drowning. 
+                    </p>
+                    <p class="text-slate-300 leading-relaxed font-light text-sm">
+                        Reading a bill and actually understanding its political impacts are two very different things. AI is already pretty good at reading 800 pages of bill text in 30 seconds. This tool sets you up to succeed and gives you more time to focus on strategy.
+                    </p>
+                </div>
+                <div class="absolute top-0 right-0 -mt-8 -mr-8 w-32 h-32 bg-slate-700 rounded-full blur-2xl opacity-30"></div>
             </div>
-            <div class="absolute top-0 right-0 -mt-10 -mr-10 w-64 h-64 bg-blue-600 rounded-full blur-3xl opacity-20"></div>
+
+            <div class="bg-blue-900 rounded-2xl p-8 text-white relative overflow-hidden flex flex-col">
+                <div class="relative z-10">
+                    <h2 class="text-xl md:text-2xl font-bold mb-4 serif">Verification Systems</h2>
+                    <p class="text-blue-100 leading-relaxed font-light text-sm mb-4">
+                        I’ve prompted the model to look for specific "staffer" concerns: effective dates, appropriations triggers, and procedural rules. 
+                    </p>
+                    <p class="text-blue-100 leading-relaxed font-light text-sm">
+                        Crucially, it generates a <span class="font-bold text-white">Verification Guide</span> with specific page numbers for every claim. You should never trust what someone else or an AI tells you is true—always verify it yourself.
+                    </p>
+                </div>
+                <div class="absolute bottom-0 left-0 -mb-8 -ml-8 w-32 h-32 bg-blue-500 rounded-full blur-2xl opacity-30"></div>
+            </div>
+
         </div>
 
         <div>
@@ -121,7 +135,6 @@
 
         <div class="text-center pt-12 border-t border-slate-200">
             <p class="font-bold text-slate-900 text-lg serif">— Zachary Florman</p>
-            <p class="text-sm text-slate-500 uppercase tracking-wide mt-1">Developer & Former Staffer</p>
         </div>
 
     </div>
