--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>About | The Capitol Wire</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
 
     <style>
@@ -51,19 +52,19 @@
       </div>
       <div class="flex items-center gap-4">
         <a href="/dashboard/" class="text-xs font-semibold text-slate-500 hover:text-blue-700 uppercase tracking-wide">Dashboard</a>
-        <a href="/" class="text-xs font-bold bg-slate-900 hover:bg-slate-800 text-white px-4 py-2 rounded shadow-sm transition-colors">
-          Back to Briefs
-        </a>
+        <button class="text-xs font-bold bg-slate-900 hover:bg-slate-800 text-white px-5 py-2.5 rounded shadow-sm transition-colors" onclick="openModal()">
+          Get Alerts
+        </button>
       </div>
     </div>
   </nav>
 
-  <header class="bg-white border-b border-slate-200 py-10 px-6 text-center">
+  <header class="bg-white border-b border-slate-200 py-6 px-6 text-center">
       <div class="max-w-3xl mx-auto">
-          <h1 class="text-3xl md:text-4xl font-bold text-slate-900 mb-3 leading-tight serif">
+          <h1 class="text-2xl md:text-3xl font-bold text-slate-900 mb-2 leading-tight serif">
               About The Capitol Wire
           </h1>
-          <p class="text-lg text-slate-600 font-light">
+          <p class="text-sm text-slate-600 font-light">
               Why I built an AI to read Congress so you don't have to.
           </p>
       </div>
@@ -138,9 +139,9 @@
                     <div class="hover-detail bg-slate-50 rounded p-3 text-left border-t border-slate-100">
                         <p class="text-[10px] font-bold text-slate-400 uppercase tracking-wider mb-1">Technical Logic</p>
                         <ul class="text-[11px] text-slate-600 space-y-1 list-disc pl-3">
-                            <li>Polls <span class="font-mono">docs.house.gov</span> [cite: 14]</li>
+                            <li>Polls <span class="font-mono">docs.house.gov</span></li>
                             <li>Checks Majority Leader schedule</li>
-                            <li>Redis hashing for state changes [cite: 31]</li>
+                            <li>Redis hashing for state changes</li>
                         </ul>
                     </div>
                 </div>
@@ -153,9 +154,9 @@
                     <div class="hover-detail bg-slate-50 rounded p-3 text-left border-t border-slate-100">
                         <p class="text-[10px] font-bold text-slate-400 uppercase tracking-wider mb-1">Technical Logic</p>
                         <ul class="text-[11px] text-slate-600 space-y-1 list-disc pl-3">
-                            <li>Flags "Advance Notice" items [cite: 16]</li>
+                            <li>Flags "Advance Notice" items</li>
                             <li>Extracts XML & PDF text</li>
-                            <li>Parses "Added" timestamps [cite: 17]</li>
+                            <li>Parses "Added" timestamps</li>
                         </ul>
                     </div>
                 </div>
@@ -168,9 +169,9 @@
                     <div class="hover-detail bg-slate-50 rounded p-3 text-left border-t border-slate-100">
                         <p class="text-[10px] font-bold text-slate-400 uppercase tracking-wider mb-1">Technical Logic</p>
                         <ul class="text-[11px] text-slate-600 space-y-1 list-disc pl-3">
-                            <li>Generates stable DB IDs [cite: 26]</li>
-                            <li>Broadcasts via AWS SES [cite: 32]</li>
-                            <li>Upserts to Supabase [cite: 28]</li>
+                            <li>Generates stable DB IDs</li>
+                            <li>Broadcasts via AWS SES</li>
+                            <li>Upserts to Supabase</li>
                         </ul>
                     </div>
                 </div>
@@ -180,7 +181,7 @@
 
         <div class="text-center pt-10 border-t border-slate-200 pb-8">
             <p class="font-bold text-slate-900 text-base serif">— Zachary Florman</p>
-            <a href="mailto:ZFlorman@gmail.com" class="text-xs text-slate-400 hover:text-blue-600 transition-colors font-medium mt-1 inline-block">ZFlorman@gmail.com</a>
+            <a href="mailto:zach@thecapitolwire.com" class="text-xs text-slate-400 hover:text-blue-600 transition-colors font-medium mt-1 inline-block">zach@thecapitolwire.com</a>
         </div>
 
     </div>
@@ -191,6 +192,87 @@
           View Live Dashboard
       </a>
   </footer>
+
+  <div id="modal" class="hidden fixed inset-0 z-[100] items-center justify-center bg-slate-900/60 backdrop-blur-sm">
+    <div class="w-[92%] max-w-md rounded-xl bg-white shadow-2xl border border-slate-200 p-6 relative">
+      <button class="absolute right-4 top-4 text-slate-400 hover:text-slate-700 text-2xl leading-none" onclick="closeModal()" aria-label="Close">&times;</button>
+      <h3 class="text-lg font-bold text-slate-900 serif">Get Instant Alerts</h3>
+      <p class="mt-1 text-sm text-slate-600">Enter your email to get notified when the schedule or analysis updates.</p>
+      <input id="modal-email" type="email" placeholder="Enter your email" class="mt-4 w-full rounded border border-slate-300 px-4 py-2.5 text-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" />
+      <button id="modal-submit" class="mt-3 w-full rounded bg-slate-900 hover:bg-black text-white font-bold py-2.5 text-sm transition-all shadow-md">Subscribe Free</button>
+      <div id="modal-status" class="mt-2 text-xs font-semibold min-h-[20px]"></div>
+    </div>
+  </div>
+
+  <script>
+      // SUPABASE SETUP (Matches your Dashboard)
+      const SUPABASE_URL = 'https://jcrsdyyqrbtxyzhveszx.supabase.co';
+      const SUBSCRIBE_KEY = "sb_publishable_oQOSOkFpJAPfmnINrAYYUg_FNMRBM1h";
+      
+      // Ensure Supabase is loaded
+      let subscribeClient = null;
+      if (window.supabase) {
+          subscribeClient = supabase.createClient(SUPABASE_URL, SUBSCRIBE_KEY);
+      } else {
+          console.error("Supabase not loaded");
+      }
+
+      // MODAL LOGIC
+      const modalEl = document.getElementById('modal');
+      const modalEmail = document.getElementById('modal-email');
+      const modalSubmit = document.getElementById('modal-submit');
+      const modalStatus = document.getElementById('modal-status');
+
+      function openModal() { 
+          if(modalEl) { 
+              modalEl.classList.remove('hidden'); 
+              modalEl.classList.add('flex'); 
+              if(modalEmail) modalEmail.focus(); 
+          }
+      }
+      function closeModal() { 
+          if(modalEl) { 
+              modalEl.classList.add('hidden'); 
+              modalEl.classList.remove('flex'); 
+              if(modalStatus) modalStatus.textContent=""; 
+              if(modalSubmit) { modalSubmit.disabled=false; modalSubmit.textContent="Subscribe Free"; }
+          }
+      }
+      if(modalEl) modalEl.addEventListener('click', (e) => { if(e.target===modalEl) closeModal(); });
+
+      if(modalSubmit && subscribeClient) {
+          modalSubmit.addEventListener('click', async () => {
+              const email = (modalEmail && modalEmail.value ? modalEmail.value.trim() : "");
+              if(!email || !email.includes('@')) { 
+                  modalStatus.textContent="Please enter a valid email."; 
+                  modalStatus.style.color="#ef4444"; 
+                  return; 
+              }
+              modalSubmit.disabled=true; 
+              modalSubmit.textContent="Processing..."; 
+              modalStatus.textContent="";
+              
+              const { error } = await subscribeClient.from('subscribers').insert([{ email }]);
+              if(error) {
+                   if(error.code==='23505') { 
+                       modalStatus.textContent="You are already subscribed!"; 
+                       modalStatus.style.color="#3b82f6"; 
+                   }
+                   else { 
+                       modalStatus.textContent="Error. Try again."; 
+                       modalStatus.style.color="#ef4444"; 
+                   }
+                   modalSubmit.disabled=false; 
+                   modalSubmit.textContent="Subscribe Free"; 
+                   return;
+              }
+              modalStatus.textContent="Subscribed!"; 
+              modalStatus.style.color="#22c55e";
+              if(modalEmail) modalEmail.value="";
+              setTimeout(closeModal, 1200);
+          });
+      }
+  </script>
 
 </body>
 </html>
