--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -530,7 +530,8 @@
             const { data, error } = await _supabase
                 .from('live_feed')
                 .select('*')
-                .order('id', { ascending: true })
+                .eq('is_visible', true)
+                .order('timestamp', { ascending: false })
                 .limit(100);
             if (error) {
                 console.error("Supabase Error:", error);
@@ -563,7 +564,9 @@
                     }
                 }
 
-                localStorage.setItem("live_feed_prev", JSON.stringify(next));
+                if (latestActivityData.length === 0) {
+                    localStorage.setItem("live_feed_prev", JSON.stringify(next));
+                }
 
                 allBillData = data;
                 window.latestActivityData = latestActivityData;
