--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -546,8 +546,7 @@
                         row.timestamp || "",
                         row.title || "",
                         row.category || "",
-                        row.section || "",
-                        row.page_timestamp || ""
+                        row.section || ""
                     ]);
                 }
 
